Implemented stress-test ant target